--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,5 +1,5 @@
 .user-container {
-  background-image: url(../images/test);
+  background-image: url('https://lostandfoundv2.yiwangchunyu.wang/media/dynamic/2021/2/28/20210228165012_31561.jpg');
   background-size: 100% 100%;
   padding-top: 50rpx; 
   padding-bottom: 50rpx;
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 230rpx;
 }
 
 .userinfo-avatar {
@@ -25,12 +26,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 23rpx;
 }
 
 .userinfo-nickname {
-  margin-top: 4%;
-  font-size: 35rpx;
+  font-size: 32rpx;
   text-align: center;
+  color: rgb(65, 65, 65);
 }
 
 .menu_bg {
