--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,8 +1,8 @@
-<swiper indicator-dots="{{indicatorDots}}"
+<swiper class="banners"  indicator-dots="{{indicatorDots}}"
   autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
     <block wx:for="{{imgUrls}}">
-      <swiper-item>
-        <image src="{{item}}" class="slide-image"/>
+      <swiper-item class="banner">
+        <image src="{{item}}" width="100%" height="100%" class="slide-image"/>
       </swiper-item>
     </block>
 </swiper>
@@ -54,7 +54,7 @@
                   <view class="date-count">
                      <text class="date-count-text">{{item.date_count}}天内完成</text>
                   </view>
-                  <text class="start">开始练习></text>
+                  <view bindtap="gotoex" class="start">开始练习></view>
                   <text class="lesson-list-desc">{{item.title}}</text>
                 </view>
               <!-- </navigator> -->
