--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -3,6 +3,19 @@
   height:350rpx;
 }
 
+.banners {
+  width: 100%;
+  height: 350rpx;
+  position: relative;
+  top: 0;
+}
+.banner {
+  width: 100%;
+  height: 350rpx;
+  position: relative;
+  top: 0;
+}
+
 .container {
   height: 100%;
   min-height: 100%;
@@ -60,6 +73,7 @@
   line-height: 80rpx;
   background: #fff;
   display: flex;
+  justify-content: space-around;
   padding: 0 200rpx;
   border-bottom: 1px solid #f5f5f5;
   box-sizing: border-box;
@@ -150,7 +164,7 @@
   position: absolute;
   bottom: 3%;
   left: 0;
-  width: 94%;
+  width: 95%;
   text-align: center;
   font-size: 25rpx;
   padding: 10rpx;
@@ -205,7 +219,7 @@
   position: absolute;
   bottom: 0%;
   left: 0;
-  width: 97%;
+  width: 97.5%;
   text-align: center;
   font-size: 25rpx;
   padding: 10rpx;
