--- a/pages/lesson/lesson.wxml
+++ b/pages/lesson/lesson.wxml
@@ -1,3 +1,5 @@
-<view >
- <video style="width: 100%;height=400px;margin:1px;" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" binderror="videoErrorCallback"></video>
-</view>
+<view class="record"><text>{{lesson_video[0].title}}</text>
+	</view>
+	<view class="record-image">
+		<video class="record-img" style="width: 100%;height=400px;margin:1px;" src="{{lesson_video[0].url}}"binderror="videoErrorCallback"></video>
+	</view>
