--- a/pages/myquestions/myquestions.wxss
+++ b/pages/myquestions/myquestions.wxss
@@ -14,12 +14,12 @@
 .cells__title {
   font-weight: bold;
   justify-content: center;
+  display: flex;
   margin: 0 auto;
-  margin-top: 250rpx;
+  margin-top: 300rpx;
   margin-bottom: 2em;
-  padding-left: 140rpx;
   /* color: #999999; */
-  font-size: 15px;
+  font-size: 20px;
 }
 .cells_after-title {
   margin-top: 0;
@@ -41,17 +41,18 @@
 }
 .btn-container{
   justify-content: center;
-  margin: 0 auto;
   flex-direction: column;
   display: flex;
 }
 .agree-btn-cls{
-  top: 150rpx;
-  width: 70%;
-  padding-bottom: 10rpx;
+  width: 80%;
+  padding: 15rpx 70rpx 15rpx;
   border-radius: 100rpx;
-  justify-content: center;
-  margin: 0 auto;
+  margin-top: 200rpx;
+  background-color: #fff;
+  border: 2px solid #ffa600;
+  font-size: 30rpx;
+  color: #f5a614;
 }
 .cell_input {
   justify-content: center;
@@ -117,14 +118,6 @@
   margin-bottom: 10rpx;
   padding-left: 30rpx;
   padding-right: 30rpx;
-}
-.btn-area{
-  margin-top: 50rpx;
-  margin-left: 500rpx;
-  box-sizing: border-box;
-  width: 100%;
-  padding: 0 30rpx;
-  
 }
 
 
