--- a/pages/exercise/exercise.wxss
+++ b/pages/exercise/exercise.wxss
@@ -66,8 +66,13 @@
   display: flex;
   flex-direction: row;
   margin-left: 30rpx;
+  margin-top: 70rpx;
+}
+.button-group-cls2{
+  display: flex;
+  flex-direction: row;
+  margin-left: 30rpx;
   margin-top: 20rpx;
-  
 }
 .original1{
   /* position: absolute; */
@@ -151,3 +156,67 @@
   width: 300rpx;
   height: 300rpx;
 }
+
+/* page{
+  background-image:linear-gradient(45deg, #FBE7E5, #65322F);
+} */
+
+.music-button{
+  float: left;
+  overflow: hidden;
+}
+.music-button>view{
+  text-align: center;
+  background: #fff;
+  float: left;
+  overflow: hidden;
+  border: 1px solid #f5a614;
+  line-height: 56rpx;
+  padding: 0rpx;
+  width: 320rpx;
+  text-align: center;
+  border-radius: 10rpx;
+  color: #000;
+  font-weight: 300;
+  margin-left: 15rpx;
+}
+.cu-progress{
+  height: 5rpx;
+  width: 88%;
+  float: left;
+  background-color: #000;
+  left: 6%;
+  position: relative; 
+}
+.cu-prucin{
+  height: 100%;
+  background-color: #000;
+  float: left;
+  position: relative;
+}
+.cu-prucin::after{
+  border-radius: 50%;
+	background: #ff9900;
+	position: absolute;
+	right: 0rpx;
+	content: '';
+	display: block;
+  margin: calc((6rpx - 14rpx)/2);
+	width: 14rpx;
+	height: 14rpx;
+}
+.cu-left{
+  position: absolute;
+  left: 0;
+  margin-top: 16rpx;
+  color: #000;
+  font-size: 22rpx;
+}
+.cu-right{
+  position: absolute;
+  right: 0;
+  margin-top: 16rpx;
+  color: #000;
+  font-size: 22rpx;
+}
+
